--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="https://static.pexels.com/photos/158471/ibis-bird-red-animals-158471.jpeg">
           <img src="https://static.pexels.com/photos/133459/pexels-photo-133459.jpeg">
             <img src="https://static.pexels.com/photos/50988/ape-berber-monkeys-mammal-affchen-50988.jpeg">
-    <!-- New changes made-->
+    <!-- New changes -->
   
   </div>
     
